attempt 2 at fixing scrollbar style within passwords list

--- a/src/pages/Saved Passwords/savedpasswords.css
+++ b/src/pages/Saved Passwords/savedpasswords.css
@@ -1,3 +1,4 @@
 #listed-passwords {
-	scrollbar-color: #161616 #3e3e3e !important;
+	overflow-y: scroll;
+	scrollbar-color: #161616 #3e3e3e;
 }
